footer collapse padding fix

--- a/static/css/header.css
+++ b/static/css/header.css
@@ -66,7 +66,8 @@ header {
 .dropdown:hover li {
 	color: #cc092f !important;
 }
-.dropdown-product-categories {
+.dropdown-product-categories,
+.bb {
 	border-bottom: 1px solid #dcdcdc;
 }
 .border-left {
